--- a/style.css
+++ b/style.css
@@ -30,9 +30,194 @@ body{
 }
 
 
+
 /*===============================================
-●社風
+●会社概要
 ================================================*/
+/********** PC用 **********/
+.outline_title {
+	text-align:center;
+}
+
+.outline_wrapper {
+	height: 10%;
+	width: 100%;
+	margin: 0.5% 0;
+	display: table;
+}
+
+.outline_hr {
+  border-top: 1px solid #D8D8D8;
+  width: 100%;
+}
+
+.outline_index {
+	width: 20%;
+	background-color: #EFFBFB;
+	display: table-cell;
+	vertical-align: middle;
+	padding-left: 1%;
+}
+
+.container {
+	display: table-cell;
+	vertical-align: middle;
+	padding-left: 1%;
+}
+
+.partner {
+	padding-bottom: 2%;
+}
+
+.address {
+	float:left;
+	width: 50%;
+}
+
+/*各地図の位置*/
+.google-box {
+	float: right;
+    height: 430px;
+    width: 430px;
+}
+
+/*===============================================
+●経営理念
+================================================*/
+/********** PC用 **********/
+.philosophy_title {
+	text-align: center;
+}
+
+.slogan_container {
+	padding: 0 2em 0 2em;
+	margin-top: 2%;
+}
+
+	/* 経営理念下見出し */
+.slogan_headderText {
+	text-align: center;
+	font-size: 25;
+	font-weight: 600; 
+	margin: 40px 170px;
+	position: relative;
+	padding: 0.25em 0;
+}
+.slogan_headderText:after {		/* 見出し下線 */
+	content: "";
+	display: block;
+	height: 4px;
+	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
+}
+
+.slogan_mainText {
+	text-align: center;	
+	line-height: 200%;	
+	margin: 40px 60px 40px 60px;
+	font-size: 110%;
+}
+
+
+.greeting_wrapper {
+	position: relative;
+	padding: 0 2em 0 2em;
+}
+
+.wrap_greetingTitle {
+	margin-bottom: 10px;
+}
+
+
+
+.wrap_upper_president {
+	padding: 0 2em;
+	height: 400px;
+	width: 100%;
+	margin: 0 20px;
+	display: table;
+}
+
+.upper_presidentComment {
+	width: 55%;
+	height: 100%;
+	margin: 20px;
+	padding: 50px 0 30px 0;
+	line-height: 215%;
+	display: table-cell;
+	vertical-align: top;
+}
+
+.presidentImg {
+	display: table-cell;
+	width: 100%;
+	padding: 0 0 0 40px;
+}
+
+
+.presidentName {
+	width: auto;
+	margin: 10px 180px 0 0;
+	text-align:right;
+}
+
+
+
+.wrapper_list{
+	text-align: center;
+	width: 100%;
+	background-color: #F5F6E2;
+	padding: 1em 0 0.3em 0;
+	margin: 2% 0;
+}
+
+p.list_headderWord {
+	text-align: center;
+	font-size: 120%;
+	font-weight: 545;
+	color: #300000;
+	-webkit-text-stroke:0.6px #300000;
+	margin: 2% 0 1% 0;
+}
+
+.philosophy_list{
+	font-size: 140%;
+	line-height:250%;
+	width: 50%;
+    padding: 18px 20px 18px 25px;
+    margin: 1.5em 0 2em 12em;
+    color: #000000;
+    border-top: double 7px #300000;
+    border-bottom: double 7px #300000;
+	font-weight: 800;
+}
+
+.list_text_1 {
+	color: #330000;
+	margin: 0;
+}
+.list_text_2 {
+	color: #330000;
+	margin: 0;
+}
+.list_text_3 {
+	color: #330000;
+	margin: 0;
+}
+
+.bottom_presidentComment {
+	padding: 0;
+	line-height:200%;
+}
+
+
+/*===============================================
+●社員紹介
+================================================*/
+
+/********** 社風 **********/
+
 .nakama{
 	width:1000;
 	margin:0 auto;
@@ -111,9 +296,7 @@ h2:after{
 */
 
 
-/*===============================================
-●スタッフ
-================================================*/
+/********** スタッフ **********/
 .staff{
 	width:1000;
 	margin:50px auto;
@@ -141,9 +324,7 @@ h2:after{
 	text-align:center;
 }
 
-/*===============================================
-●紹介
-================================================*/
+/********** 紹介 **********/
 
 
 
