--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -3,152 +3,17 @@
 ******************************** */
 @media screen and (min-width: 769px){
 
-	body{
-		width: 1200px;
-		padding-left: 10%;
-		padding-right: 10%;
-		font-family: "游ゴシック";
-		background-image: url(images/background.png);
-		margin: auto;
-	}
-
-	.title {
-		text-align: center;
-	}
-
-	.slogan_container {
-		padding: 0 2em 0 2em;
-		margin-top: 2%;
-	}
 
 
 
-	/* 経営理念下見出し */
-	.slogan_headderText {
-		text-align: center;
-		font-size: 25;
-		font-weight: 600; 
-		margin: 40px 170px;
-		position: relative;
-		padding: 0.25em 0;
-	}
-	.slogan_headderText:after {		/* 見出し下線 */
-		content: "";
-		display: block;
-		height: 4px;
-		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
-		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-		background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
-	}
-
-	.slogan_mainText {
-		text-align: center;	
-		line-height: 200%;	
-		margin: 40px 60px 40px 60px;
-		font-size: 110%;
-	}
 
 
 
-	/************** 社長あいさつより下 ****************/
-
-	.greeting_wrapper {
-		position: relative;
-		padding: 0 2em 0 2em;
-	}
-
-	.wrap_greetingTitle {
-		margin-bottom: 10px;
-	}
-	
-	h2{
-		text-align: left;
-		padding: .5em .75em;
-		background-color: #f6f6f6;
-		border-left: 6px solid #ccc;
-	}
-
-	.wrap_upper_president {
-		padding: 0 2em;
-		height: 400px;
-		width: 100%;
-		margin: 0 20px;
-		display: table;
-	}
-
-	.upper_presidentComment {
-		width: 55%;
-		height: 100%;
-		margin: 20px;
-		padding: 50px 0 30px 0;
-		line-height: 215%;
-		display: table-cell;
-		vertical-align: top;
-	}
-
-	.presidentImg {
-		display: table-cell;
-		width: 100%;
-		padding: 0 0 0 40px;
-	}
 
 
-	.presidentName {
-		width: auto;
-		margin: 10px 180px 0 0;
-		text-align:right;
-	}
 
-	.clear {
-	    clear:both;
-	}
 
-	.wrapper_list{
-		text-align: center;
-		width: 100%;
-		background-color: #F5F6E2;
-		padding: 1em 0 0.3em 0;
-		margin: 2% 0;
-	}
 
-	p.list_headderWord {
-		text-align: center;
-		font-size: 120%;
-		font-weight: 545;
-		color: #300000;
-		-webkit-text-stroke:0.6px #300000;
-		margin: 2% 0 1% 0;
-	}
-
-	.list{
-		font-size: 140%;
-		line-height:250%;
-		width: 50%;
-	    padding: 18px 20px 18px 25px;
-	    margin: 1.5em 0 2em 12em;
-	    color: #000000;
-	    border-top: double 7px #300000;
-	    border-bottom: double 7px #300000;
-		font-weight: 800;
-	}
-
-	.list_text_1 {
-		color: #330000;
-		margin: 0;
-	}
-	.list_text_2 {
-		color: #330000;
-		margin: 0;
-	}
-	.list_text_3 {
-		color: #330000;
-		margin: 0;
-	}
-	
-	.bottom_presidentComment {
-		padding: 0;
-		line-height:200%;
-	}
 
 
 }
@@ -247,7 +112,7 @@
 	}
 
 
-	.list{
+	.philosophy_list{
 		font-size: 120%;
 		width: 74%;
 	    padding: 8px 30px;
@@ -315,7 +180,7 @@
 		background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
 	}
 	
-	.list{
+	.philosophy_list{
 		font-size: 95%;
 		width: 100%;
 		padding: 0;
