--- a/style.css
+++ b/style.css
@@ -578,7 +578,81 @@ h2:after{
 		padding: 0;
 		line-height:200%;
 	}
+	
+	
+	/*===============================================
+	●仕事内容
+	================================================*/
+	
+	img.title02 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
 
+	.working_text {
+		text-align: center;
+	}
+
+	img.image1 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image2 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image3 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image4 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image5 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image6 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image7 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image8 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image9 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	img.image10 {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
 
 
 }
