--- a/style.css
+++ b/style.css
@@ -235,8 +235,9 @@ h2:after{
 	.copyright{text-align:center; font-size: 13px; margin-top: 0; padding: 0 0; height:40px; line-height: 40px;}
 
 	/* 募集要項関連 */
+	.imageMarginBox{text-align: center;}
 	.recruitTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
-	.recruitBox{width:85%; display: block; margin:auto; margin-bottom:50px; padding:auto;}
+	.recruitBox{width:75%; display: block; margin:auto; margin-bottom:50px; margin-top: 15px; padding:auto;}
 	.recruitList{color: #002b62; font-size: 18px; font-weight: bold; float: left;}
 	.recruitListdd {border-bottom: 2px solid #D7E8F0; margin-bottom: 15px; margin-left: 0; padding: 0 0 12px 185px;}
 	.buttonBox{}
