--- a/style.css
+++ b/style.css
@@ -347,11 +347,12 @@ h2:after{
 	/* 募集要項関連 */
 	.imageMarginBox{text-align: center;}
 	.imageMarginBox img{width:95%}
-	.walfareText{margin-bottom:25px;}
+	.walfareText{margin:30px 0;}
 	.recruitTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
 	.recruitBox{width:75%; display: block; margin:auto; margin:50px auto; padding:auto;}
 	.recruitList{color: #002b62; font-size: 18px; font-weight: bold; float: left;}
 	.recruitListdd {border-bottom: 2px solid #D7E8F0; margin-bottom: 15px; margin-left: 0; padding: 0 0 12px 185px;}
+	.recruitListdd_last {margin-bottom: 15px; margin-left: 0; padding: 0 0 12px 185px;}
 	.buttonBox{}
 	.square_btn{
 	    display: inline-block;
