--- a/style.css
+++ b/style.css
@@ -498,7 +498,7 @@ h2:after{
 		width: 55%;
 		height: 100%;
 		margin: 20px;
-		padding: 50px 0 30px 0;
+		padding: 50px 60px 30px 0;
 		line-height: 215%;
 		display: table-cell;
 		vertical-align: top;
@@ -507,13 +507,13 @@ h2:after{
 	.presidentImg {
 		display: table-cell;
 		width: 100%;
-		padding: 0 0 0 40px;
+		padding: 0 0 0 15px;
 	}
 
 
 	.presidentName {
 		width: auto;
-		margin: 10px 190px 0 0;
+		margin: 10px 215px 0 0;
 		text-align:right;
 	}
 
@@ -673,7 +673,6 @@ h2:after{
 	}
 
 	.image{
-		width:50%;
 		margin:50px auto ;
 	}
 	
@@ -823,10 +822,16 @@ h2:after{
 		text-align: center;
 		font-size: 16;
 		font-weight: 600; 
-		margin: 50px 0;
+		margin: 50px 50px;
 		position: relative;
 		padding: 0.25em 0;
 	}
+	
+	.slogan_mainText{
+		text-align: center;
+		margin-bottom: 50px;
+	}
+	
 	.slogan_headderText:after {
 		content: "";
 		display: block;
@@ -837,6 +842,10 @@ h2:after{
 	}
 
 	/************** 社長あいさつより下 ****************/
+	
+	.wrap_upper_president{
+		margin: 20px 45px;
+	}
 
 	.greeting_wrapper {
 		position: relative;
@@ -850,6 +859,14 @@ h2:after{
 	.presidentName {
 		text-align: right;
 		margin-top: 20px;
+	}
+	
+	.presidentImg{
+		float: right;
+	}
+	
+	.presidentImg img{
+		float: right;
 	}
 
 
@@ -870,7 +887,7 @@ h2:after{
 
 	.philosophy_list{
 		font-size: 120%;
-		width: 74%;
+		width: 75%;
 	    padding: 8px 30px;
 	    margin: 5% 4%;
 	    color: #330000;
@@ -899,6 +916,9 @@ h2:after{
 	    text-indent: -2em;
 	}
 
+	.bottom_presidentComment{
+		margin: 20px 45px 50px 45px;
+	}
 
 
 }
@@ -925,7 +945,6 @@ h2:after{
 	    font-family: "游ゴシック";
 	}
 	.image{
-		width:60%;
 		margin:50px auto ;
 	}
 	.titleImage{
@@ -1063,7 +1082,7 @@ h2:after{
 		text-align: center;
 		font-size: 16;
 		font-weight: 600; 
-		margin: 50px 0;
+		margin: 50px 50px;
 		position: relative;
 		padding: 0.25em 0;
 	}
@@ -1085,7 +1104,16 @@ h2:after{
 		border-top: double 7px #000000;
 		border-bottom: double 7px #000000;
 		font-weight: 800;
-		/* padding-left: 50px; */
+		text-align: center;
+	}
+	
+	p.list_headderWord {
+	    text-align: center;
+	    font-size: 100%;
+	    font-weight: 545;
+	    color: #300000;
+	    -webkit-text-stroke: 0.6px #300000;
+	    margin: 2% 3% 1% 0;
 	}
 
 
