--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ h2 {
 	   height: 1px;
 	}
 	
-	footer{width:1200px; background-color:#e6f2f7;}
+	footer{width:1200px; background-color:none;}
 	.LinkImageBox{width:80%; margin:auto; padding: 10px 0;}
 	.chibit{height:200px; float:left;}
 	img.ricNaviImage{height:120px; margin-left:20px; margin-top:50px;}
